--- a/homeStyles.css
+++ b/homeStyles.css
@@ -4,14 +4,39 @@ body {
     margin: 0;
     font-family: Verdana, sans-serif;
     background-color: #d0e6f7;
+    user-select: none;
 }
 
 header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 10px;
     background-color: #ffffff;
     color: #3476ab;
     text-align: left;
     height: 150px;
     font-size: 23px;
+}
+
+
+#header-logo {
+    display:flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 10px;
+    width: 100px;
+    height: 100px;
+}
+
+#header-logo-EKC {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-left: auto;
+    width: 300px;
+    height: auto;
+    padding: 10px;
 }
 
 header h2 {
@@ -64,28 +89,24 @@ main {
     
 }
 
-#header-logo {
-    display:flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-}
 
-#header-logo-EKC {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    margin-left: auto;
-    width: 300px;
-    height: auto;
-    padding: 10px;
-}
 
 #hamburgerImg {
     height: auto;
     width: 40px;
+}
+
+.hamburger-menu {
+    height: 40px;
+    width: 40px;
+    z-index: 1;
+    display: flex;
+    cursor: pointer;
+    justify-content: flex-start;
+    align-items: center;
+    cursor: pointer;
+    padding: 10px;
+
 }
 
 #menu-toggle{ /*hide the chackbox*/
@@ -187,8 +208,8 @@ main {
 }
 
 #copyright {
-    font-size: 20px;
-    margin-top: 8vh;
+    font-size: 18px;
+    margin-top: 10vh;
     left: 50%;
     transform: translateX(-50%);
     position: absolute;
@@ -199,19 +220,23 @@ main {
     height: 80px;
     margin-top: 4vh;
     flex: 1 1 100px;
-    
+    right: 0;
+    margin-right: 15px;
     transform: translateX(-50%);
     position: absolute;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-end;
+    justify-content: flex-end;
     font-size: 14px;
 }
 
 #footer-logo img {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     object-fit: contain;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 footer {
@@ -223,22 +248,64 @@ footer {
 }
 
 
-@media(max-width: 400px),(max-height: 400px){
-
+@media (max-width: 600px), (max-height: 600px){
+    .menu{
+        display: none;
+    }
     .wrapper{
         flex-direction: column;
     }
-    footer{
-        flex-direction: column;
-    }
-    #logo{
+    .side-nav{
         display: none;
     }
-    #footer-text{
+    header{
+        height: 100px;
+        font-size: 12px;
+    }
+    #header-logo {
+        width: 150px;
+        height: auto;
+    }
+
+    main {
+        font-size: 15px;
+        padding: 10px;
+    }
+    #footer-logo {
+        display: none;
+    }
+    footer {
+        flex-direction: column;
+        padding: 10px;
+    }
+    #header-logo {
+        width: 100px;
+        height: auto;
+    }
+    #header-logo-EKC {
+        width: 200px;
+        height: auto;
+    }
+    #copyright {
         font-size: 10px;
     }
-    #copyright{
-        font-size: 10px;
+
+
+}
+
+@media (min-width: 601px), (min-height: 601px){
+    .menu{
+        display: none;
+    }
+
+}
+
+@media (min-width: 601px) {
+    .hamburger-menu {
+        display: none;
+    }
+    header {
+        font-size: 18px;
     }
 
 }
