--- a/homeStyles.css
+++ b/homeStyles.css
@@ -89,7 +89,31 @@ main {
     
 }
 
+#homeVideo {
+    flex: flex-start;
+    justify-content: left;
+    align-items: left;
+    display: flex;
+    padding: 40px;
+    min-width: 200px;
+    min-height: 200px;
+    width: auto;
+    height: auto;
+}
 
+#documentation {
+    flex: flex-start;
+    justify-self: center;
+    align-items: center;
+    display: flex;
+    padding: 20px;
+    border: 4px solid #3476ab;
+    background-color: #e6f0f7;
+    font-size: 16px;
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
+}
 
 #hamburgerImg {
     height: auto;
