--- a/homeStyles.css
+++ b/homeStyles.css
@@ -94,26 +94,53 @@ main {
     justify-content: left;
     align-items: left;
     display: flex;
-    padding: 40px;
+    padding: 10px;
     min-width: 200px;
     min-height: 200px;
     width: auto;
     height: auto;
+    
 }
-
 #documentation {
-    flex: flex-start;
-    justify-self: center;
-    align-items: center;
     display: flex;
-    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    min-width: 570px;
+    padding: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #000000;
     border: 4px solid #3476ab;
     background-color: #e6f0f7;
-    font-size: 16px;
-    text-align: center;
-    width: 100%;
-    cursor: pointer;
 }
+
+
+#responsiveDoc {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  
+    padding: 30px;
+    font-size: 16px;
+    text-decoration: none;
+    color: #000000;
+    border: 4px solid #3476ab;
+    background-color: #e6f0f7;
+}
+
+#promptText {
+    flex: flex-start;
+    justify-content: left;
+    align-items: left;
+    display: flex;
+    padding: 40px;
+    font-size: 18px;
+    padding: 10px;
+    text-align: left;
+    max-width: 100%;
+}
+
 
 #hamburgerImg {
     height: auto;
@@ -283,12 +310,21 @@ footer {
         display: none;
     }
     header{
+        width: 100%;
         height: 100px;
         font-size: 12px;
     }
     #header-logo {
         width: 150px;
         height: auto;
+    }
+    #documentation {
+        display: none;
+    }
+
+    #promptText {
+        font-size: 12px;
+        padding: 10px;
     }
 
     main {
@@ -317,19 +353,32 @@ footer {
 
 }
 
-@media (min-width: 601px), (min-height: 601px){
-    .menu{
-        display: none;
+@media (min-width: 870px) {
+    .menu {
+        display: block;
     }
-
-}
-
-@media (min-width: 601px) {
     .hamburger-menu {
         display: none;
     }
-    header {
-        font-size: 18px;
+    #responsiveDoc {
+        display: none;
     }
+    .side-nav {
+        display: flex;
+    }
+}
 
+@media (max-width: 870px) {
+    .menu {
+        display: none;
+    }
+    #documentation {
+        display: none;
+    }
+    .hamburger-menu {
+        display: flex;
+    }
+    .side-nav {
+        display: none;
+    }
 }
