--- a/homeStyles.css
+++ b/homeStyles.css
@@ -20,6 +20,7 @@ header {
 }
 
 
+
 #header-logo {
     display:flex;
     justify-content: flex-start;
@@ -101,11 +102,36 @@ main {
     height: auto;
     
 }
+
+#contact {
+    flex: flex-start;
+    justify-content: left;
+    align-items: left;
+    display: flex;
+    margin-left: 10px;
+    margin-top: 10px;
+    padding: 10px;
+    width: auto;
+    height: auto;
+    background-color: #e6f0f7;
+    transition: 0.3s;
+    border: #2e6793 solid 4px;
+    font-weight: bold;
+
+}
+#contact:hover {
+    transition: 0.3s;
+    background-color: #3476ab;
+    color: #ffffff;
+}
+
 #documentation {
+    cursor:pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 570px;
+    min-width: 560px;
+    margin-left: 10px;
     padding: 30px;
     font-size: 16px;
     font-weight: bold;
@@ -113,20 +139,36 @@ main {
     color: #000000;
     border: 4px solid #3476ab;
     background-color: #e6f0f7;
+    transition: 0.3s;
+}
+
+#documentation:hover {
+    transition: 0.3s;
+    background-color: #3476ab;
+    color: #ffffff;
 }
 
 
 #responsiveDoc {
+    cursor:pointer;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-  
+    
     padding: 30px;
     font-size: 16px;
+    font-weight: bold;
     text-decoration: none;
     color: #000000;
     border: 4px solid #3476ab;
     background-color: #e6f0f7;
+    transition: 0.3s;
+}
+
+#responsiveDoc:hover {
+    transition: 0.3s;
+    background-color: #3476ab;
+    color: #ffffff;
 }
 
 #promptText {
