--- a/Resources/resourcesStyles.css
+++ b/Resources/resourcesStyles.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    height: 100%;
     flex-direction: column;
     margin: 0;
     font-family: Verdana, sans-serif;
@@ -88,6 +89,17 @@ main {
     padding: 20px;
     
 }
+#resources-list {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    font-size: 18px;
+    background-color: #cee5f1;
+    border-radius: 20px;
+    border: 5px solid #3476ab; /* Larger blue border around the elements */
+    padding: 40px; /* Increased padding inside the box for more room */
+}
+
 
 
 
@@ -184,6 +196,7 @@ main {
 }
 
 .footer-links {
+    flex-shrink: 0;
     display: flex;
     gap: 3px; 
     flex-wrap: wrap;
@@ -191,7 +204,7 @@ main {
     background-color: #404040;
     color: #ffffff;
     font-size: 15px;
-    justify-content: flex-start; 
+    justify-content: space-between; 
 }
 
 .footer-links a {
