--- a/homeStyles.css
+++ b/homeStyles.css
@@ -19,10 +19,16 @@ header {
     font-size: 23px;
 }
 
-
+#wrapper-inner {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
 
 #header-logo {
-    display:flex;
+    display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     padding: 10px;
@@ -125,14 +131,27 @@ main {
     color: #ffffff;
 }
 
+
+#documentationImg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 20px;
+    height: auto;
+    width: 550px;
+    min-width: 200px;
+    
+}
+
 #documentation {
     cursor:pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 560px;
-    margin-left: 10px;
-    padding: 30px;
+    min-width: 550px;
+    margin-left: 20px;
+    padding: 20px;
     font-size: 16px;
     font-weight: bold;
     text-decoration: none;
@@ -351,7 +370,7 @@ footer {
     .side-nav{
         display: none;
     }
-    header{
+    header {
         width: 100%;
         height: 100px;
         font-size: 12px;
@@ -408,6 +427,10 @@ footer {
     .side-nav {
         display: flex;
     }
+    #wrapper-inner {
+        display: flex;
+        flex-direction: row;
+    }
 }
 
 @media (max-width: 870px) {
@@ -421,6 +444,9 @@ footer {
         display: flex;
     }
     .side-nav {
+        display: none;
+    }
+    #documentationImg {
         display: none;
     }
 }
