--- a/Syntax/syntaxStyles.css
+++ b/Syntax/syntaxStyles.css
@@ -20,6 +20,71 @@ header {
 }
 
 
+footer {
+    flex-shrink: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: #404040;
+    color: #ffffff;
+    border: 5px solid #b9b9b9; 
+    text-align: center;
+    gap: 20px;
+}
+
+
+
+.footer-links {
+    margin-top: 50px;
+    flex-direction: column;
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    margin-bottom: 5px;
+
+}
+
+.footer-links a {
+    color: #ffffff;
+    text-decoration: none;
+    flex: 1 1 calc(35% - 5px); /* Reduced gap between columns */
+    text-align: center;
+    padding: 5px;
+}
+
+.footer-links a:hover {
+    text-decoration: underline;
+    color: #ffffff;
+    opacity: 0.8;
+    transition: 0.3s;
+}
+
+#copyright {
+    font-size: 14px;
+    text-align: center;
+    width: 100%;
+    margin-top: 5px;
+}
+
+#footer-logo {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+#footer-logo img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
 #header-logo {
     display:flex;
     justify-content: flex-start;
@@ -183,69 +248,6 @@ main {
     background-color: #e6f0f7;
 }
 
-.footer-links {
-    display: flex;
-    gap: 3px; 
-    flex-wrap: wrap;
-    padding: 10px;
-    background-color: #404040;
-    color: #ffffff;
-    font-size: 15px;
-    justify-content: flex-start; 
-}
-
-.footer-links a {
-    color: #ffffff;
-    text-decoration: none;
-    align-content: left;
-    flex: 1 1 calc(35% - 10px); /* Reduced gap between columns */
-}
-
-#footer-text {
-    font-size: 20px;
-    text-align: center;
-    padding-right: 10px;
-}
-
-#copyright {
-    font-size: 18px;
-    margin-top: 10vh;
-    left: 50%;
-    transform: translateX(-50%);
-    position: absolute;
-}
-
-#footer-logo {
-    width: 80px;
-    height: 80px;
-    margin-top: 4vh;
-    flex: 1 1 100px;
-    right: 0;
-    margin-right: 15px;
-    transform: translateX(-50%);
-    position: absolute;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    font-size: 14px;
-}
-
-#footer-logo img {
-    width: 80px;
-    height: 80px;
-    object-fit: contain;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-}
-
-footer {
-    display: flex;
-    padding: 55px;
-    background-color: #404040;
-    color: #ffffff;
-    border: 5px solid #b9b9b9; 
-}
 
 
 @media (max-width: 600px), (max-height: 600px){
@@ -271,13 +273,7 @@ footer {
         font-size: 15px;
         padding: 10px;
     }
-    #footer-logo {
-        display: none;
-    }
-    footer {
-        flex-direction: column;
-        padding: 10px;
-    }
+
     #header-logo {
         width: 100px;
         height: auto;
