--- a/Uses/usesStyles.css
+++ b/Uses/usesStyles.css
@@ -29,6 +29,10 @@ header {
     font-size: 23px;
 }
 
+h2 {
+    display: flex;
+    font-size: 30px;
+}
 
 
 footer {
@@ -118,11 +122,8 @@ footer {
     padding: 10px;
 }
 
-header h2 {
-    display: flex;
-    padding: 20px;
 
-}
+
 .wrapper {
     display: flex;
     flex-direction: row;
@@ -161,7 +162,14 @@ header h2 {
 
 
 
-
+#question-text.question-text {
+    font-size: 20px;
+    margin: 0;
+    padding: 20px;
+    color: #2e6793;
+    text-align: center;
+    font-weight: bold;
+}
 
 
 .choices {
@@ -173,6 +181,9 @@ header h2 {
     background-color: #ffffff;
     color: #3476ab;
     text-align: center;
+    border-radius: 20px;
+    border: 4px solid #3476ab; 
+    padding: 40px;
 }
 
 .choices button {
@@ -185,6 +196,7 @@ header h2 {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    
 }
 
 .choices button:hover {
