--- a/Basics/basicsStyles.css
+++ b/Basics/basicsStyles.css
@@ -47,6 +47,15 @@ footer {
 
 }
 
+
+h2 {
+    display: flex;
+    font-size: 29px;
+    color: #3476ab;
+    margin-left: 20px;
+}
+
+
 .footer-links a {
     color: #ffffff;
     text-decoration: none;
