--- a/Syntax/syntaxStyles.css
+++ b/Syntax/syntaxStyles.css
@@ -253,6 +253,12 @@ main {
     
 }
 
+h2 {
+    display: flex;
+    font-size: 29px;
+    color: #3476ab;
+}
+
 #introText {
     font-size: 18px;
 }
