--- a/About/aboutStyles.css
+++ b/About/aboutStyles.css
@@ -5,6 +5,7 @@ body {
     font-family: Verdana, sans-serif;
     background-color: #d0e6f7;
     user-select: none;
+    height: 100%;
 }
 
 header {
@@ -34,6 +35,7 @@ footer {
     color: #ffffff;
     border: 5px solid #b9b9b9; 
     text-align: center;
+    margin-top: auto;
     gap: 20px;
 }
 
@@ -96,7 +98,7 @@ footer {
 .footer-links a {
     color: #ffffff;
     text-decoration: none;
-    flex: 1 1 calc(35% - 5px); /* Reduced gap between columns */
+    flex: 1 1 calc(35% - 5px); 
     text-align: center;
     padding: 5px;
 }
@@ -171,7 +173,7 @@ h3 {
     display: flex;
     flex-direction: column;
     width: 200px;
-    height: 100vh;
+    
     background-color: #2e6793;
     padding: 10px;
 }
@@ -296,6 +298,8 @@ main {
 }
 
 .wrapper_inner {
+    display: flex;
+    flex-direction: column;
     padding: 20px;
     background-color: #e6f0f7;
     
