--- a/Syntax/syntaxStyles.css
+++ b/Syntax/syntaxStyles.css
@@ -1,9 +1,10 @@
-body {
+html, body {
     display: flex;
     flex-direction: column;
     margin: 0;
     font-family: Verdana, sans-serif;
     background-color: #d0e6f7;
+    height: 100%;
     user-select: none;
 }
 
@@ -111,6 +112,7 @@ header h2 {
 }
 .wrapper {
     display: flex;
+    flex: 1;
     flex-direction: row;
 }
 
@@ -119,7 +121,7 @@ header h2 {
     display: flex;
     flex-direction: column;
     width: 200px;
-    height: 100vh;
+    
     background-color: #2e6793;
     padding: 10px;
 }
@@ -148,6 +150,9 @@ header h2 {
 
 
 main {
+    display: flex;
+    flex-direction: column;
+    
     flex: 1;
     font-size: 20px;
     padding: 20px;
