--- a/Uses/usesStyles.css
+++ b/Uses/usesStyles.css
@@ -168,6 +168,7 @@ footer {
     margin: 0;
     padding: 20px;
     color: #2e6793;
+    border: 2px solid #3476ab; 
     text-align: center;
     font-weight: bold;
 }
@@ -183,7 +184,7 @@ footer {
     color: #3476ab;
     text-align: center;
     border-radius: 20px;
-    border: 4px solid #3476ab; 
+    border: 2px solid #3476ab; 
     padding: 40px;
 }
 
@@ -204,6 +205,49 @@ footer {
     background-color: #3476ab;
 }
 
+
+.feedback {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    background-color: #ffffff;
+    color: #3476ab;
+    text-align: center;
+    border-radius: 20px;
+    border: 2px solid #3476ab; 
+    padding: 40px;
+}
+
+
+
+#quiz-container p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    color: #2e6793;
+    background-color: #ffffff;
+    border: 4px solid #3476ab; 
+    padding: 40px;
+    border-radius: 20px;
+}
+
+#try-again-button {
+    padding: 10px 20px;
+    background-color: #2e6793;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+    margin-top: 20px;
+}
+
+#try-again-button:hover {
+    background-color: #3476ab;
+}
 
 #hamburgerImg {
     height: auto;
