--- a/homeStyles.css
+++ b/homeStyles.css
@@ -176,9 +176,22 @@ main {
     
 }
 
-#homeVideo, #homeVideo2 {
+#videoContainer {
     display: flex;
-    padding: 10px
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: 20px 0;
+    
+    
+}
+
+#videoContainer iframe {
+    flex: 1 1 calc(50% - 20px);
+    max-width: 560px; 
+    height: auto;
+    aspect-ratio: 16/9;
 }
 
 
@@ -378,7 +391,7 @@ h2 {
 
 
 
-@media (max-width: 600px), (max-height: 600px){
+@media (max-width: 600px) {
     .menu{
         display: none;
     }
@@ -411,6 +424,20 @@ h2 {
         padding: 10px;
     }
 
+    #videoContainer {
+        flex-direction: column;
+        align-items: center;
+        
+        justify-content: center;
+    }
+
+    #videoContainer iframe {
+        flex: 1 1 calc(50% - 20px);
+        max-width: 100%;
+        
+        aspect-ratio: 16/9;
+    }
+    
 
     #header-logo {
         width: 100px;
@@ -457,13 +484,7 @@ h2 {
         display: flex;
 
     }
-    #homeVideo, #homeVideo2 {
-        width: 100%;
-        height: auto;
-        min-width: 150px;
-        align-items: center;
-        justify-content: center;
-    }
+    
     header h1  {
         font-size: 35px;
     }
