--- a/Uses/usesStyles.css
+++ b/Uses/usesStyles.css
@@ -164,11 +164,12 @@ footer {
 
 
 #question-text.question-text {
-    font-size: 20px;
+    font-size: 18px;
     margin: 0;
-    padding: 20px;
+    padding: 30px;
     color: #2e6793;
-    border: 2px solid #3476ab; 
+    background-color: #ffffff;
+    
     text-align: center;
     font-weight: bold;
     border-radius: 20px;
@@ -194,7 +195,7 @@ footer {
     padding: 10px 20px;
     background-color: #2e6793;
     color: #ffffff;
-    min-width: 80px;
+    min-width: 90px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -208,6 +209,7 @@ footer {
 
 
 .feedback {
+    opacity: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -216,8 +218,8 @@ footer {
     color: #3476ab;
     text-align: center;
     border-radius: 20px;
-    border: 2px solid #3476ab; 
     padding: 40px;
+    transition: opacity 2s;
 }
 
 
@@ -229,7 +231,7 @@ footer {
     font-size: 18px;
     color: #2e6793;
     background-color: #ffffff;
-    border: 4px solid #3476ab; 
+    
     padding: 40px;
     border-radius: 20px;
 }
@@ -296,7 +298,7 @@ footer {
     top: 0px;
     left: 0;
     width:200px;
-    
+    height: 100vh;
     z-index: 100;
     background: #2e6793;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -383,7 +385,9 @@ footer {
     #copyright {
         font-size: 10px;
     }
-
+    #removelogo {
+        display: none;
+    }
 
 }
 
