--- a/homeStyles.css
+++ b/homeStyles.css
@@ -262,20 +262,21 @@ h2 {
 
 
 #responsiveDoc {
-    cursor:pointer;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    
     padding: 30px;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
     text-decoration: none;
     color: #000000;
+    min-width: 400px;
     border: 4px solid #3476ab;
     background-color: #e6f0f7;
     transition: 0.3s;
 }
+
 
 #responsiveDoc:hover {
     transition: 0.3s;
