--- a/Interpreter/interpreterStyles.css
+++ b/Interpreter/interpreterStyles.css
@@ -391,3 +391,35 @@ main {
         height: calc(100vw * 9 / 16); 
     }
 }
+
+@media (max-width: 870px) {
+    .menu {
+        display: none;
+    }
+    #documentation {
+        display: none;
+    }
+    #responsiveDoc {
+        display: flex;
+
+    }
+    
+    header h1  {
+        font-size: 35px;
+    }
+    #footerLogo {
+        display: none;
+    }
+    #contact {
+        display: none;
+    }
+    .hamburger-menu {
+        display: flex;
+    }
+    .side-nav {
+        display: none;
+    }
+    #documentationImg {
+        display: none;
+    }
+}
