--- a/Syntax/syntaxStyles.css
+++ b/Syntax/syntaxStyles.css
@@ -363,3 +363,35 @@ h2 {
     }
 
 }
+
+@media (max-width: 870px) {
+    .menu {
+        display: none;
+    }
+    #documentation {
+        display: none;
+    }
+    #responsiveDoc {
+        display: flex;
+
+    }
+    
+    header h1  {
+        font-size: 35px;
+    }
+    #footerLogo {
+        display: none;
+    }
+    #contact {
+        display: none;
+    }
+    .hamburger-menu {
+        display: flex;
+    }
+    .side-nav {
+        display: none;
+    }
+    #documentationImg {
+        display: none;
+    }
+}
